--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 }
 
 dependencies {
+    compile 'com.google.code.gson:gson:2.6.2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
